--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="./Gemathon_files/css/main.css">
     <!-- GOOGLE WEB FONTS -->
     <link href="./Gemathon_files/css/css.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="./Gemathon_files/images/ruby-logo.png">
   </head>
 
   <body>
