--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
     <!-- TWITTER BOOTSTRAP -->
     <script src="./Gemathon_files/js/bootstrap.min.js" type="text/javascript"></script>
     <!--[if lt IE 9]>
-      <script src="assets/js/bootstrap/html5shiv.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
     <![endif]-->
     <!-- PLUGINS -->
     <script src="./Gemathon_files/js/jquery.bxslider.min.js" type="text/javascript"></script>
